명세 업데이트

--- a/명세.md
+++ b/명세.md
@@ -1,5 +1,7 @@
 # 명세
 
+## Ver 1.0
+
 1.  웹
 
     1.  라즈베리파이 관리
@@ -34,3 +36,10 @@
     1.  연결에 필요한 내 IP 표시
     1.  현재 연결된 서버 표시
     1.  현재 재생 중인 동영상 이름
+
+## Ver 1.1
+
+1.  일괄 작업 기능 (영상 바꾸기, 업데이트)
+1.  업데이트 기능
+1.  라즈베리파이 부팅 시 원래 재생 중이던 영상 틀기 기능
+1.  예외 처리
